# sourcesink

./: CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.rst  Untitled-1.ipynb  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
src/modern_python_template/: template.py
src/sourcesink/: __init__.py  sourcesink.py
tests/: conftest.py  test_sourcesink.py
